--- a/symfony-project/templates/company/dev-info.html.twig
+++ b/symfony-project/templates/company/dev-info.html.twig
@@ -54,10 +54,10 @@
                     <hr>
                     
 
-                    <div class="p-3">
+                    {# <div class="p-3">
                         <button class="btn btn-primary" style="font-size: 0.9rem;">
                             <i class="bi bi-chat-dots"></i> Contacter</button>
-                    </div>
+                    </div> #}
                 </div>
             </div>
         </div>
